Updates are added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Form</title>
 </head>
 <body>
+    <p>Katti chut</p>
     <form name="myForm" action="/action_page.php" onsubmit="return checkforblank()" method="post"required>
     <div class="a">
     <p class="z">START LEARNING!!</p>
